Refactor CI workflow with separate jobs for macOS, Ubuntu, and Alpine

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,30 +11,74 @@ permissions:
   pull-requests: write
 
 jobs:
-  test:
+  setup:
+    runs-on: ubuntu-latest
+    outputs:
+      swift-versions: ${{ steps.set-matrix.outputs.swift-versions }}
+    env:
+      # Define Swift versions - add new versions here
+      SWIFT_VERSIONS: |
+        6.0.3
+        6.1.0
+    steps:
+      - id: set-matrix
+        run: |
+          # Convert multi-line string to JSON array (jq is pre-installed on GitHub runners)
+          VERSIONS=$(echo "$SWIFT_VERSIONS" | jq -R -s -c 'split("\n") | map(select(length > 0))')
+          echo "swift-versions=$VERSIONS" >> $GITHUB_OUTPUT
+
+  test-macos:
+    needs: setup
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest]
-        swift-version:
-          - 6.0.3
-          - 6.1.0
-
-    runs-on: ${{ matrix.os }}
-    name: Test (${{ matrix.os }}, Swift ${{ matrix.swift-version }})
-
+        swift-version: ${{ fromJson(needs.setup.outputs.swift-versions) }}
+    runs-on: macos-latest
+    name: Test (macOS, Swift ${{ matrix.swift-version }})
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup Swift on Linux
-        if: matrix.os == 'ubuntu-latest'
-        uses: vapor/swiftly-action@v0.2
-        with:
-          toolchain: ${{ matrix.swift-version }}
-      - name: Setup Swift on macOS
-        if: matrix.os == 'macos-latest'
+      - name: Setup Swift
         uses: swift-actions/setup-swift@v2
         with:
           swift-version: ${{ matrix.swift-version }}
+
+      - name: Build
+        run: swift build -v
+
+      - name: Run tests
+        run: swift test -v
+
+  test-ubuntu:
+    needs: setup
+    strategy:
+      matrix:
+        swift-version: ${{ fromJson(needs.setup.outputs.swift-versions) }}
+    runs-on: ubuntu-latest
+    name: Test (Ubuntu, Swift ${{ matrix.swift-version }})
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Swift
+        uses: vapor/swiftly-action@v0.2
+        with:
+          toolchain: ${{ matrix.swift-version }}
+
+      - name: Build
+        run: swift build -v
+
+      - name: Run tests
+        run: swift test -v
+
+  test-alpine:
+    needs: setup
+    strategy:
+      matrix:
+        swift-version: ${{ fromJson(needs.setup.outputs.swift-versions) }}
+    runs-on: ubuntu-latest
+    container: swift:${{ matrix.swift-version }}-alpine
+    name: Test (Alpine, Swift ${{ matrix.swift-version }})
+    steps:
+      - uses: actions/checkout@v4
 
       - name: Build
         run: swift build -v
