Add step to install system dependencies on Alpine Linux

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,6 +80,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install system dependencies
+        run: apk add --no-cache bash curl jq gnupg
+
       - name: Setup Swift
         uses: vapor/swiftly-action@v0.2
         with:
