Add name to setup step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ permissions:
 
 jobs:
   setup:
+    name: Setup
     runs-on: ubuntu-latest
     outputs:
       swift-versions: ${{ steps.set-matrix.outputs.swift-versions }}
@@ -27,12 +28,12 @@ jobs:
           echo "swift-versions=$VERSIONS" >> $GITHUB_OUTPUT
 
   test-macos:
+    name: Test (macOS, Swift ${{ matrix.swift-version }})
     needs: setup
     strategy:
       matrix:
         swift-version: ${{ fromJson(needs.setup.outputs.swift-versions) }}
     runs-on: macos-latest
-    name: Test (macOS, Swift ${{ matrix.swift-version }})
     steps:
       - uses: actions/checkout@v4
 
@@ -48,12 +49,12 @@ jobs:
         run: swift test -v
 
   test-ubuntu:
+    name: Test (Ubuntu, Swift ${{ matrix.swift-version }})
     needs: setup
     strategy:
       matrix:
         swift-version: ${{ fromJson(needs.setup.outputs.swift-versions) }}
     runs-on: ubuntu-latest
-    name: Test (Ubuntu, Swift ${{ matrix.swift-version }})
     steps:
       - uses: actions/checkout@v4
 
@@ -69,13 +70,13 @@ jobs:
         run: swift test -v
 
   test-alpine:
+    name: Test (Alpine, Swift ${{ matrix.swift-version }})
     needs: setup
     strategy:
       matrix:
         swift-version: ${{ fromJson(needs.setup.outputs.swift-versions) }}
     runs-on: ubuntu-latest
     container: alpine:latest
-    name: Test (Alpine, Swift ${{ matrix.swift-version }})
     steps:
       - uses: actions/checkout@v4
 
