Refactor CI workflow with separate jobs for macOS, Linux, and Windows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,30 +11,88 @@ permissions:
   pull-requests: write
 
 jobs:
-  test:
+  setup:
+    name: Setup
+    runs-on: ubuntu-latest
+    outputs:
+      swift-versions: ${{ steps.set-matrix.outputs.swift-versions }}
+    env:
+      SWIFT_VERSIONS: |
+        6.0.3
+        6.1.0
+    steps:
+      - id: set-matrix
+        run: |
+          # Convert multi-line string to JSON array (jq is pre-installed on GitHub runners)
+          VERSIONS=$(echo "$SWIFT_VERSIONS" | jq -R -s -c 'split("\n") | map(select(length > 0))')
+          echo "swift-versions=$VERSIONS" >> $GITHUB_OUTPUT
+
+  test-macos:
+    name: Test (macOS, Swift ${{ matrix.swift-version }})
+    needs: setup
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest]
-        swift-version:
-          - 6.0.3
-          - 6.1.0
-
-    runs-on: ${{ matrix.os }}
-    name: Test (${{ matrix.os }}, Swift ${{ matrix.swift-version }})
-
+        swift-version: ${{ fromJson(needs.setup.outputs.swift-versions) }}
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup Swift on Linux
-        if: matrix.os == 'ubuntu-latest'
-        uses: vapor/swiftly-action@v0.2
-        with:
-          toolchain: ${{ matrix.swift-version }}
-      - name: Setup Swift on macOS
-        if: matrix.os == 'macos-latest'
+      - name: Setup Swift
         uses: swift-actions/setup-swift@v2
         with:
           swift-version: ${{ matrix.swift-version }}
+
+      - name: Build
+        run: swift build -v
+
+      - name: Run tests
+        run: swift test -v
+
+  test-ubuntu:
+    name: Test (Ubuntu, Swift ${{ matrix.swift-version }})
+    needs: setup
+    strategy:
+      matrix:
+        swift-version: ${{ fromJson(needs.setup.outputs.swift-versions) }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Swift
+        uses: vapor/swiftly-action@v0.2
+        with:
+          toolchain: ${{ matrix.swift-version }}
+
+      - name: Build
+        run: swift build -v
+
+      - name: Run tests
+        run: swift test -v
+
+  test-windows:
+    name: Test (Windows, Swift ${{ matrix.swift-version }})
+    needs: setup
+    strategy:
+      matrix:
+        swift-version: ${{ fromJson(needs.setup.outputs.swift-versions) }}
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install Swift
+        shell: powershell
+        run: |
+          # Download Swift
+          $url = "https://download.swift.org/swift-${{ matrix.swift-version }}-release/windows10/swift-${{ matrix.swift-version }}-RELEASE/swift-${{ matrix.swift-version }}-RELEASE-windows10.exe"
+          $output = "$env:TEMP\swift-installer.exe"
+          Invoke-WebRequest -Uri $url -OutFile $output
+
+          # Install Swift silently
+          Start-Process -FilePath $output -ArgumentList "/quiet" -Wait
+
+          # Add Swift to PATH
+          echo "C:\Library\Swift-development\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+          echo "C:\Library\Swift-development\usr\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
       - name: Build
         run: swift build -v
